{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 102,
  "lineage": "a9c2dc88-f4e7-fa25-64f8-cb7d80e1ad56",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "lb_dns_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:loadbalancer/app/DP-LB-Edu/ffe65486767be453",
            "arn_suffix": "app/DP-LB-Edu/ffe65486767be453",
            "dns_name": "DP-LB-Edu-369318984.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:loadbalancer/app/DP-LB-Edu/ffe65486767be453",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "DP-LB-Edu",
            "security_groups": [
              "sg-021978ff78a610018"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-072a1f73169def8d8"
              },
              {
                "subnet_id": "subnet-0bf92eae98ff31d3a"
              }
            ],
            "subnets": [
              "subnet-072a1f73169def8d8",
              "subnet-0bf92eae98ff31d3a"
            ],
            "vpc_id": "vpc-0664fbbb878d1d2cb",
            "zone_id": "Z215JYRZR1TBD5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "DP_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e03050b",
            "domain": "vpc",
            "id": "eipalloc-0e03050b",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-157-142-208.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.157.142.208",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.IGW_DP",
            "aws_vpc.DP-Edu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Back-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047e03b8591f2d48a",
            "arn": "arn:aws:ec2:eu-central-1:055524789533:instance/i-09b14f5f29e6ede07",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b14f5f29e6ede07",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-005f989e2e38350a2",
            "private_dns": "ip-10-0-3-175.eu-central-1.compute.internal",
            "private_ip": "10.0.3.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-052ea15e1b0bd8c1d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d671bf1227bc102e",
            "tags": {
              "Name": "Backend A"
            },
            "tags_all": {
              "Name": "Backend A"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-021978ff78a610018"
            ]
          },
          "dependencies": [
            "aws_security_group.SG_WEB",
            "aws_subnet.Private_subnet-A",
            "aws_vpc.DP-Edu",
            "data.aws_ami.Latest_Amazon_Linux",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Back-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047e03b8591f2d48a",
            "arn": "arn:aws:ec2:eu-central-1:055524789533:instance/i-0c3360e681bed0fda",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c3360e681bed0fda",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a1c8dab37cd809cc",
            "private_dns": "ip-10-0-4-117.eu-central-1.compute.internal",
            "private_ip": "10.0.4.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-040e7054513972d17",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0152187faa116463c",
            "tags": {
              "Name": "Backend B"
            },
            "tags_all": {
              "Name": "Backend B"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-021978ff78a610018"
            ]
          },
          "dependencies": [
            "aws_security_group.SG_WEB",
            "aws_subnet.Private_subnet-B",
            "aws_vpc.DP-Edu",
            "data.aws_ami.Latest_Amazon_Linux",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Private_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047e03b8591f2d48a",
            "arn": "arn:aws:ec2:eu-central-1:055524789533:instance/i-0ab599af3562d5574",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab599af3562d5574",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ab9686917877b80c",
            "private_dns": "ip-10-0-3-238.eu-central-1.compute.internal",
            "private_ip": "10.0.3.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07186041263c62e6a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d671bf1227bc102e",
            "tags": {
              "Name": "Webserver Private A"
            },
            "tags_all": {
              "Name": "Webserver Private A"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-021978ff78a610018"
            ]
          },
          "dependencies": [
            "aws_security_group.SG_WEB",
            "aws_subnet.Private_subnet-A",
            "aws_vpc.DP-Edu",
            "data.aws_ami.Latest_Amazon_Linux",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Private_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047e03b8591f2d48a",
            "arn": "arn:aws:ec2:eu-central-1:055524789533:instance/i-0f9925a97dc1d129b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9925a97dc1d129b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f16f9387ddb0b580",
            "private_dns": "ip-10-0-4-51.eu-central-1.compute.internal",
            "private_ip": "10.0.4.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08724bb0616d7a285",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0152187faa116463c",
            "tags": {
              "Name": "Webserver Private A"
            },
            "tags_all": {
              "Name": "Webserver Private A"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-021978ff78a610018"
            ]
          },
          "dependencies": [
            "aws_security_group.SG_WEB",
            "aws_subnet.Private_subnet-B",
            "aws_vpc.DP-Edu",
            "data.aws_ami.Latest_Amazon_Linux",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047e03b8591f2d48a",
            "arn": "arn:aws:ec2:eu-central-1:055524789533:instance/i-07a96c86ba348b319",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07a96c86ba348b319",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b27ca25be34073a3",
            "private_dns": "ip-10-0-1-182.eu-central-1.compute.internal",
            "private_ip": "10.0.1.182",
            "public_dns": "ec2-3-70-222-124.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.70.222.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08721c321c866c003",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072a1f73169def8d8",
            "tags": {
              "Name": "Webserver TF"
            },
            "tags_all": {
              "Name": "Webserver TF"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-021978ff78a610018"
            ]
          },
          "dependencies": [
            "aws_security_group.SG_WEB",
            "aws_subnet.Public_subnet_A",
            "aws_vpc.DP-Edu",
            "data.aws_ami.Latest_Amazon_Linux",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW_DP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:055524789533:internet-gateway/igw-0273f999f16fc2f8e",
            "id": "igw-0273f999f16fc2f8e",
            "owner_id": "055524789533",
            "tags": {
              "Name": "IGW_DP"
            },
            "tags_all": {
              "Name": "IGW_DP"
            },
            "vpc_id": "vpc-0664fbbb878d1d2cb"
          },
          "dependencies": [
            "aws_vpc.DP-Edu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:loadbalancer/app/DP-LB-Edu/ffe65486767be453",
            "arn_suffix": "app/DP-LB-Edu/ffe65486767be453",
            "dns_name": "DP-LB-Edu-369318984.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:loadbalancer/app/DP-LB-Edu/ffe65486767be453",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "DP-LB-Edu",
            "security_groups": [
              "sg-021978ff78a610018"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-072a1f73169def8d8"
              },
              {
                "subnet_id": "subnet-0bf92eae98ff31d3a"
              }
            ],
            "subnets": [
              "subnet-072a1f73169def8d8",
              "subnet-0bf92eae98ff31d3a"
            ],
            "vpc_id": "vpc-0664fbbb878d1d2cb",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.SG_WEB",
            "aws_subnet.Public_subnet_A",
            "aws_subnet.Public_subnet_B",
            "aws_vpc.DP-Edu",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:listener/app/DP-LB-Edu/ffe65486767be453/4f5875c221fd048c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:targetgroup/tf-20211109092317844900000002/4804373e5f30765b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:listener/app/DP-LB-Edu/ffe65486767be453/4f5875c221fd048c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:loadbalancer/app/DP-LB-Edu/ffe65486767be453",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Balancer",
            "aws_lb_target_group.Front",
            "aws_security_group.SG_WEB",
            "aws_subnet.Public_subnet_A",
            "aws_subnet.Public_subnet_B",
            "aws_vpc.DP-Edu",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "phpmyadmin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:targetgroup/tf-20211109092317842900000001/5ce548dd52f2160f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:listener-rule/app/DP-LB-Edu/ffe65486767be453/4f5875c221fd048c/8fba5819246f4c08",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/phpmyadmin/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:listener-rule/app/DP-LB-Edu/ffe65486767be453/4f5875c221fd048c/8fba5819246f4c08",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:listener/app/DP-LB-Edu/ffe65486767be453/4f5875c221fd048c",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Balancer",
            "aws_lb_listener.front",
            "aws_lb_target_group.Front",
            "aws_lb_target_group.back",
            "aws_security_group.SG_WEB",
            "aws_subnet.Public_subnet_A",
            "aws_subnet.Public_subnet_B",
            "aws_vpc.DP-Edu",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:targetgroup/tf-20211109092317844900000002/4804373e5f30765b",
            "arn_suffix": "targetgroup/tf-20211109092317844900000002/4804373e5f30765b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 8,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:targetgroup/tf-20211109092317844900000002/4804373e5f30765b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20211109092317844900000002",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "TG_Front"
            },
            "tags_all": {
              "Name": "TG_Front"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0664fbbb878d1d2cb"
          },
          "dependencies": [
            "aws_vpc.DP-Edu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:targetgroup/tf-20211109092317842900000001/5ce548dd52f2160f",
            "arn_suffix": "targetgroup/tf-20211109092317842900000001/5ce548dd52f2160f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 8,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:targetgroup/tf-20211109092317842900000001/5ce548dd52f2160f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20211109092317842900000001",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "TG_Back"
            },
            "tags_all": {
              "Name": "TG_Back"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0664fbbb878d1d2cb"
          },
          "dependencies": [
            "aws_vpc.DP-Edu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TG_back-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:targetgroup/tf-20211109092317842900000001/5ce548dd52f2160f-20211109092355029300000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:targetgroup/tf-20211109092317842900000001/5ce548dd52f2160f",
            "target_id": "i-09b14f5f29e6ede07"
          },
          "dependencies": [
            "aws_instance.Back-A",
            "aws_lb_target_group.back",
            "aws_security_group.SG_WEB",
            "aws_subnet.Private_subnet-A",
            "aws_vpc.DP-Edu",
            "data.aws_ami.Latest_Amazon_Linux",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TG_back-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:targetgroup/tf-20211109092317842900000001/5ce548dd52f2160f-20211109092405271700000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:targetgroup/tf-20211109092317842900000001/5ce548dd52f2160f",
            "target_id": "i-0c3360e681bed0fda"
          },
          "dependencies": [
            "aws_instance.Back-B",
            "aws_lb_target_group.back",
            "aws_security_group.SG_WEB",
            "aws_subnet.Private_subnet-B",
            "aws_vpc.DP-Edu",
            "data.aws_ami.Latest_Amazon_Linux",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Target-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:targetgroup/tf-20211109092317844900000002/4804373e5f30765b-20211109092405270500000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:targetgroup/tf-20211109092317844900000002/4804373e5f30765b",
            "target_id": "i-0ab599af3562d5574"
          },
          "dependencies": [
            "aws_instance.Private_A",
            "aws_lb_target_group.Front",
            "aws_security_group.SG_WEB",
            "aws_subnet.Private_subnet-A",
            "aws_vpc.DP-Edu",
            "data.aws_ami.Latest_Amazon_Linux",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Target-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:targetgroup/tf-20211109092317844900000002/4804373e5f30765b-20211109092354845500000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:055524789533:targetgroup/tf-20211109092317844900000002/4804373e5f30765b",
            "target_id": "i-0f9925a97dc1d129b"
          },
          "dependencies": [
            "aws_instance.Private_B",
            "aws_lb_target_group.Front",
            "aws_security_group.SG_WEB",
            "aws_subnet.Private_subnet-B",
            "aws_vpc.DP-Edu",
            "data.aws_ami.Latest_Amazon_Linux",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_DP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e03050b",
            "connectivity_type": "public",
            "id": "nat-0cdf1aee89b0be650",
            "network_interface_id": "eni-071a737876d7058c4",
            "private_ip": "10.0.1.30",
            "public_ip": "18.157.142.208",
            "subnet_id": "subnet-072a1f73169def8d8",
            "tags": {
              "Name": "NAT_DP_Edu"
            },
            "tags_all": {
              "Name": "NAT_DP_Edu"
            }
          },
          "dependencies": [
            "aws_eip.DP_NAT",
            "aws_internet_gateway.IGW_DP",
            "aws_subnet.Public_subnet_A",
            "aws_vpc.DP-Edu",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:055524789533:route-table/rtb-05a671a649125e718",
            "id": "rtb-05a671a649125e718",
            "owner_id": "055524789533",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cdf1aee89b0be650",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0664fbbb878d1d2cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.DP_NAT",
            "aws_internet_gateway.IGW_DP",
            "aws_nat_gateway.NAT_DP",
            "aws_subnet.Public_subnet_A",
            "aws_vpc.DP-Edu",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:055524789533:route-table/rtb-0247f88e989cdc1a1",
            "id": "rtb-0247f88e989cdc1a1",
            "owner_id": "055524789533",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cdf1aee89b0be650",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0664fbbb878d1d2cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.DP_NAT",
            "aws_internet_gateway.IGW_DP",
            "aws_nat_gateway.NAT_DP",
            "aws_subnet.Public_subnet_A",
            "aws_vpc.DP-Edu",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_Route_DP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:055524789533:route-table/rtb-015168acc55ba9f16",
            "id": "rtb-015168acc55ba9f16",
            "owner_id": "055524789533",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0273f999f16fc2f8e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0664fbbb878d1d2cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW_DP",
            "aws_vpc.DP-Edu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_A_Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0443a8af0336ed9b8",
            "route_table_id": "rtb-05a671a649125e718",
            "subnet_id": "subnet-0d671bf1227bc102e"
          },
          "dependencies": [
            "aws_eip.DP_NAT",
            "aws_internet_gateway.IGW_DP",
            "aws_nat_gateway.NAT_DP",
            "aws_route_table.Private-A",
            "aws_subnet.Private_subnet-A",
            "aws_subnet.Public_subnet_A",
            "aws_vpc.DP-Edu",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_B_Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9aa24c03544259b",
            "route_table_id": "rtb-0247f88e989cdc1a1",
            "subnet_id": "subnet-0152187faa116463c"
          },
          "dependencies": [
            "aws_eip.DP_NAT",
            "aws_internet_gateway.IGW_DP",
            "aws_nat_gateway.NAT_DP",
            "aws_route_table.Private-B",
            "aws_subnet.Private_subnet-B",
            "aws_subnet.Public_subnet_A",
            "aws_vpc.DP-Edu",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_A_Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f8766a5213c328e",
            "route_table_id": "rtb-015168acc55ba9f16",
            "subnet_id": "subnet-072a1f73169def8d8"
          },
          "dependencies": [
            "aws_internet_gateway.IGW_DP",
            "aws_route_table.Public_Route_DP",
            "aws_subnet.Public_subnet_A",
            "aws_vpc.DP-Edu",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:055524789533:security-group/sg-021978ff78a610018",
            "description": "Security group for my web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-021978ff78a610018",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "My webserver security group",
            "name_prefix": "",
            "owner_id": "055524789533",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_WEB"
            },
            "tags_all": {
              "Name": "SG_WEB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0664fbbb878d1d2cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.DP-Edu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_subnet-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:055524789533:subnet/subnet-0d671bf1227bc102e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0d671bf1227bc102e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055524789533",
            "tags": {
              "Name": "Private_subnet-A"
            },
            "tags_all": {
              "Name": "Private_subnet-A"
            },
            "vpc_id": "vpc-0664fbbb878d1d2cb"
          },
          "dependencies": [
            "aws_vpc.DP-Edu",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_subnet-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:055524789533:subnet/subnet-0152187faa116463c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0152187faa116463c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055524789533",
            "tags": {
              "Name": "Private_subnet-B"
            },
            "tags_all": {
              "Name": "Private_subnet-B"
            },
            "vpc_id": "vpc-0664fbbb878d1d2cb"
          },
          "dependencies": [
            "aws_vpc.DP-Edu",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_subnet_DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:055524789533:subnet/subnet-00cca7fb5dad3848a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.30.0/24",
            "id": "subnet-00cca7fb5dad3848a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055524789533",
            "tags": {
              "Name": "Private_subnet_DB"
            },
            "tags_all": {
              "Name": "Private_subnet_DB"
            },
            "vpc_id": "vpc-0664fbbb878d1d2cb"
          },
          "dependencies": [
            "aws_vpc.DP-Edu",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_subnet_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:055524789533:subnet/subnet-072a1f73169def8d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-072a1f73169def8d8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "055524789533",
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "vpc_id": "vpc-0664fbbb878d1d2cb"
          },
          "dependencies": [
            "aws_vpc.DP-Edu",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_subnet_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:055524789533:subnet/subnet-0bf92eae98ff31d3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0bf92eae98ff31d3a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "055524789533",
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "vpc_id": "vpc-0664fbbb878d1d2cb"
          },
          "dependencies": [
            "aws_vpc.DP-Edu",
            "data.aws_availability_zones.av_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "DP-Edu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:055524789533:vpc/vpc-0664fbbb878d1d2cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0667cb89c28158f01",
            "default_route_table_id": "rtb-023666855271ece54",
            "default_security_group_id": "sg-0e2e0f25f1f812cd6",
            "dhcp_options_id": "dopt-0f361380df67810fa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0664fbbb878d1d2cb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-023666855271ece54",
            "owner_id": "055524789533",
            "tags": {
              "Name": "DP_Edu"
            },
            "tags_all": {
              "Name": "DP_Edu"
            }
          }
        }
      ]
    }
  ]
}